--- a/resume.html
+++ b/resume.html
@@ -18,22 +18,26 @@ Date   : Dec 13, 2021
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
-<body>
-    <div class="top">
-        <a href="main.html">Main</a>
-        <a href="honesty.html">Honesty</a>
-        <a href="resume.html">Resume</a>
-        <a href="contact.html">Contact</a>
-    </div>
-    <div>
-        <h3>ABOUT ME</h3>
-        <p>Hey! My name is Yuliana, I am from St. Petersburg, Russia. My family immigrated to Canada three years ago. I'm a CPA student and have a lot of fun studying at college. My education in the country of origin is a laser systems engineer, but my work has always been related to information technology. My last work in Russia: a mobile operator. I worked in a team that was developing a mobile application. In addition to my studies, I am raising my son - he is almost five years old. In my free time I like to read books: lately it has been specialized literature in my professional direction or something about child psychology. I love to play sports, cook and hate cleaning the house.</p>
-        <h3>EDUCATION</h3>
-        <p>Saint Petersburg State University of Aerospace Instrumentation</p>
-        <p>Laser devices and systems</p>
-        <p>Master's Degree</p>
-        <p>Seneca College</p>
-        <p>Computer Programming and Analisys</p>
-        <p>Bachelor's Degree</p>
-    <div>
-</body>
+    <body>
+        <div class="bgimg"></div>
+        <div class="top">
+            <a href="main.html">Main</a>
+            <a href="honesty.html">Honesty</a>
+            <a href="resume.html">Resume</a>
+            <a href="contact.html">Contact</a>
+        </div>
+        <div class="main">
+            <h3>ABOUT ME</h3>
+            <p>Hey! My name is Yuliana, I am from St. Petersburg, Russia. My family immigrated to Canada three years ago. I'm a CPA student and have a lot of fun studying at college. My education in the country of origin is a laser systems engineer, but my work has always been related to information technology. My last employer in Russia: a mobile operator. I worked in a team that was developing a mobile application. In addition to my studies, I am raising my son - he is almost five years old. In my free time I like to read books: lately it has been specialized literature in my professional direction or something about child psychology. I love to play sports, cook and hate cleaning the house.</p>
+        </div>
+        <div class="main">
+            <h3>EDUCATION</h3>
+            <p>Saint Petersburg State University of Aerospace Instrumentation</p>
+            <p>Laser devices and systems</p>
+            <p>Master's Degree</p>
+            <p>Seneca College</p>
+            <p>Computer Programming and Analisys</p>
+            <p>Bachelor's Degree</p>
+        </div>
+    </body>
+</html>
