--- a/honesty.html
+++ b/honesty.html
@@ -18,13 +18,14 @@ Date   : Dec 13, 2021
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
 <body>
+    <div class="bgimg"></div>
     <div class="top">
         <a href="main.html">Main</a>
         <a href="honesty.html">Honesty</a>
         <a href="resume.html">Resume</a>
         <a href="contact.html">Contact</a>
     </div>
-	<div>
+	<div class="main">
         <h2>Honesty Statement</h2>
         <p>I declare that my Final assignment is wholly my own work in accordance with Seneca Academic Policy. No part of this assignment has been copied manually or electronically from any other source (including web sites) except for the information supplied by the WEB222 instructors and / or made available in this assignment for my use.</p>
         <p>I also declare that no part of this assignment has been distributed to other students.<br></p>
