--- a/main.html
+++ b/main.html
@@ -24,10 +24,10 @@ Date   : Dec 13, 2021
         <a href="resume.html">Resume</a>
         <a href="contact.html">Contact</a>
     </div>
-    <div class="bgimg main">
+    <div class="bgimg homeMain">
 
 
-        <button class="floatingButton">Check My Resume</button>
+        <button onclick="location.href='resume.html';" class="floatingButton">Check My Resume</button>
     </div>
 
 </body>
