--- a/honesty.html
+++ b/honesty.html
@@ -13,7 +13,6 @@ Date   : Dec 13, 2021
     <head>
         <link rel="stylesheet" href="style.css">
         <title>Honesty</title>
-        <link rel="icon" type="image/png" href="favicon.ico">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
@@ -29,8 +28,22 @@ Date   : Dec 13, 2021
         <h2>Honesty Statement</h2>
         <p>I declare that my Final assignment is wholly my own work in accordance with Seneca Academic Policy. No part of this assignment has been copied manually or electronically from any other source (including web sites) except for the information supplied by the WEB222 instructors and / or made available in this assignment for my use.</p>
         <p>I also declare that no part of this assignment has been distributed to other students.<br></p>
-        <p>Name: Yulianna Gusarova</p>
-        <p>Student Id: 121251193</p>
-        <p>Dated: December 13, 2021</p>
+        <table>
+            <tr>
+                <td>Name:</td>
+                <td></td>
+                <td>Yulianna Gusarova</td>
+            </tr>
+            <tr>
+                <td>Student Id:</td>
+                <td></td>
+                <td>121251193</td>
+            </tr>
+            <tr>
+                <td>Dated:</td>
+                <td></td>
+                <td>December 13, 2021</td>  
+            </tr>
+        </table>
     </div>
 </body>
