--- a/resume.html
+++ b/resume.html
@@ -14,7 +14,6 @@ Date   : Dec 13, 2021
         <link rel="stylesheet" href="style.css">
         <meta charset="utf-8" name="viewport" content="width=90%, initial-scale=1.0">
         <title>Resume</title>
-        <link rel="icon" type="image/png" href="favicon.ico">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
@@ -27,17 +26,61 @@ Date   : Dec 13, 2021
             <a href="contact.html">Contact</a>
         </div>
         <div class="main">
-            <h3>ABOUT ME</h3>
-            <p>Hey! My name is Yuliana, I am from St. Petersburg, Russia. My family immigrated to Canada three years ago. I'm a CPA student and have a lot of fun studying at college. My education in the country of origin is a laser systems engineer, but my work has always been related to information technology. My last employer in Russia: a mobile operator. I worked in a team that was developing a mobile application. In addition to my studies, I am raising my son - he is almost five years old. In my free time I like to read books: lately it has been specialized literature in my professional direction or something about child psychology. I love to play sports, cook and hate cleaning the house.</p>
+            <div class="row">
+                <div class="col">
+                    <h3>ABOUT ME</h3>
+                    <p>Hey! My name is Yuliana, I am from St. Petersburg, Russia. My family immigrated to Canada three years ago. I'm a CPA student and have a lot of fun studying at college. My education in the country of origin is a laser systems engineer, but my work has always been related to information technology. My last employer in Russia: a mobile operator. I worked in a team that was developing a mobile application. In addition to my studies, I am raising my son - he is almost five years old. In my free time I like to read books: lately it has been specialized literature in my professional direction or something about child psychology. I love to play sports, cook and hate cleaning the house.</p>
+                </div>
+                <div class="col">
+                    <h3>BASIC INFORMATION</h3>
+                    <table>
+                        <tr>
+                            <td><p>AGE</p></td>
+                            <td></td>
+                            <td>34</td>
+                        </tr>
+                        <tr>
+                            <td><p>EMAIL</p></td>
+                            <td></td>
+                            <td>ygusarova@myseneca.ca</td>
+                        </tr>
+                        <tr>
+                            <td><p>LANGUAGE</p></td>
+                            <td></td>
+                            <td>English, Russian</td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
         </div>
         <div class="main">
             <h3>EDUCATION</h3>
-            <p>Saint Petersburg State University of Aerospace Instrumentation</p>
-            <p>Laser devices and systems</p>
-            <p>Master's Degree</p>
-            <p>Seneca College</p>
-            <p>Computer Programming and Analisys</p>
-            <p>Bachelor's Degree</p>
+            <div class="row">
+                <div class="col">
+                    <p>2005 - 2011</p>
+                    <h4>Master's Degree</h4>
+                </div>
+                <div class="col">
+                    <p>Saint Petersburg State University of Aerospace Instrumentation</p>
+                    <p>Laser devices and systems</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <p>2020 - 2022(expected)</p>
+                    <h4>Bachelor's Degree</h4>
+                </div>
+                <div class="col">
+                    <p>Seneca College</p>
+                    <p>Computer Programming and Analisys</p>
+                </div>
+            </div>
+        </div>
+        <div class="main">
+            <h3>REFLECTION</h3>
+            <div class="row"></div>
+            <p>The WEB222 course provided a broad understanding of web development. The parallel study of html, javascript and css made it possible to see the result of my work immediately and try different concepts of web development at the same time. Unlike OOP, where it is often quite difficult to at least identify the problem, the web is more high-level and easier for a beginner to "understand". Debugging allows me to receive feedback not only in the development environment window (for example, in the VS code), but also in the browser through development tools. Through the flexboxdefense game, I learned the concept of a flexbox model for distributing space between elements in an interface. I can't imagine games where one could study as clearly, for example, C ++ constructors. I tried working with different positioning objects (static, relative, fixed, absolute, sticky) and css selectors as well.</p>
+            <p>Web development is an integral part of full stack development. This semester I have been writing C++ code for a simple Oracle database interface. The results of queries and menus were displayed in a black output window. It looked pretty dull. I believe that in the next courses the black screen will be replaced by a more pleasant web interface, and thus, all three technologies complementing each other, will allow me to create an almost complete final product.</p>
         </div>
     </body>
 </html>
